basic website layout using grid

--- a/index.html
+++ b/index.html
@@ -1,21 +1,71 @@
 <!DOCTYPE html>
-<html lang=en>
+<html lang="en">
   <head>
-    <meta charset=UTF-8 />
-    <meta http-equiv=X-UA-Compatible content=IE=edge />
-    <meta name=viewport content=width=device-width, initial-scale=1.0 />
-    <meta name=description content=*>
-    <meta name=keywords content=*>
-    <meta name=author content=* />
-    <meta property=og:url content=* />
-    <meta property=og:type content=* />
-    <meta property=og:title content=* />
-    <meta property=og:description content=*/>
-    <meta property=og:image content=* />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE" ="edge" />
+    <meta
+      name="viewport"
+      content="width"
+      ="device-width,"
+      initial-scale="1.0"
+    />
+    <meta name="description" content="*" />
+    <meta name="keywords" content="*" />
+    <meta name="author" content="*" />
+    <meta property="og:url" content="*" />
+    <meta property="og:type" content="*" />
+    <meta property="og:title" content="*" />
+    <meta property="og:description" content="*" />
+    <meta property="og:image" content="*" />
     <link rel=stylesheet href=/css/style.css />
     <title>BasicGrid</title>
   </head>
   <body>
-    <p>Hello World!</p>
+    <header id="page_header">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 128 128"
+        style="enable-background: new 0 0 128 128"
+        xml:space="preserve"
+      >
+        <path
+          style="fill: #231f20"
+          d="M4.627 70.145H0V58.534h4.627v11.611zm8.224-23.989H8.224v40.997h4.627V46.156zm8.226-7.336H16.45v54.491h4.627V38.82zm8.224-8.907h-4.627v68.852h4.627V29.913zm8.225 6.842h-4.627v54.489h4.627V36.755zm8.226-14.992h-4.627v84.474h4.627V21.763zm8.224 18.333h-4.627v47.807h4.627V40.096zm8.224 5.397h-4.627v37.012H62.2V45.493zm8.226 8.051H65.8v21.59h4.627v-21.59zm8.225-21.93h-4.627v64.771h4.627V31.614zm8.224 17.284h-4.627V79.1h4.627V48.898zm8.226 6.533h-4.627v17.136h4.627V55.431zm8.224 5.388h-4.627v6.361h4.627v-6.361zm8.225 0h-4.627v6.361h4.627v-6.361zm8.226 0h-4.627v6.361h4.627v-6.361zm8.224 0h-4.627v6.361H128v-6.361z"
+        />
+      </svg>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Join</a>
+      </nav>
+    </header>
+    <main id="page_main">
+      <article class="main_article">
+        <img src="/images/headshot.png" alt="Pixel image of Isael Huard" />
+        <div class="article_desc">
+          <h2>Isael Huard</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias, cum
+            reprehenderit ex perspiciatis nisi illo nihil architecto officiis
+            quas ipsam, aliquid quo beatae? Vitae a optio neque consectetur
+            accusantium magnam!
+          </p>
+        </div>
+      </article>
+    </main>
+    <footer id="page_footer">
+      <div>
+        <a href="#"><button>Email Me</button></a>
+        <a href=""><button>Call Me</button></a>
+      </div>
+      <div>
+        <a href="#">Twitter</a>
+        <a href="#">Instagram</a>
+        <a href="#">TikTok</a>
+      </div>
+      <div>
+        <p>Copyright 2023 Isael Huard</p>
+      </div>
+    </footer>
   </body>
 </html>
